Add build-zip.sh script for creating production-ready ZIP files, update version to 1.0.7 in main plugin file, and enhance asset versioning for CSS and JS files based on modification time. Update README and CHANGELOG for new version and compatibility improvements.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "wp-scripts build",
 		"start": "wp-scripts start",
 		"lint:js": "wp-scripts lint-js",
-		"lint:css": "wp-scripts lint-style"
+		"lint:css": "wp-scripts lint-style",
+		"zip": "./build-zip.sh"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^27.0.0"
